--- a/20230216_Vision_KPP/Vision_KPP.ipynb
+++ b/20230216_Vision_KPP/Vision_KPP.ipynb
@@ -895,6 +895,14 @@
    "source": [
     "plot_image_with_bb(image_recognize, parse_persons_response(response), bb_color='r')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2997eb86",
+   "metadata": {},
+   "source": [
+    "https://github.com/vk-cs/vision_webinars/tree/main/20230216_Vision_KPP"
+   ]
   }
  ],
  "metadata": {
